--- a/sales.ipynb
+++ b/sales.ipynb
@@ -15,7 +15,10 @@
     "\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
